fixing javascript errors

--- a/source/about.html
+++ b/source/about.html
@@ -3,7 +3,7 @@ layout: about
 title: "About"
 author: FluxAugur
 date: 2014-02-17 20:21
-comments: true
+comments: false
 sharing: true
 footer: true
 ---
