--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 navbar: Blog
+title: "Disciples of Code"
+comments: false
+sharing: false
+footer: true
 ---
 
 <div class="page-content {% unless site.default_asides == empty and site.blog_index_asides == empty %}col-md-9{% else %}col-md-12{% endunless %}">
