--- a/source/contact.html
+++ b/source/contact.html
@@ -3,7 +3,7 @@ layout: contact
 title: "Contact"
 author: FluxAugur
 date: 2014-02-18 17:23
-comments: true
-sharing: true
+comments: false
+sharing: false
 footer: true
 ---
